tests/format/css/_errors_/__snapshots__/format.test.js.snap
// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`less-syntax.css [css] format 1`] = `
"CssSyntaxError: Unknown word .bordered (1:4)
> 1 | a {.bordered();}
    |    ^
  2 |
Cause: <css input>:1:4: Unknown word .bordered"
`;

exports[`scss-syntax.css [css] format 1`] = `
"CssSyntaxError: Unknown word $foo (1:15)
> 1 | a {content: #{$foo}}
    |               ^
  2 |
Cause: <css input>:1:15: Unknown word $foo"
`;
